--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "connect": "^3.3.5",
     "express": "^4.12.3",
-    "nodemon": "^1.3.7"
+    "express-session": "^1.10.4",
+    "node-rest-client": "^1.4.4",
+    "nodemon": "^1.3.7",
+    "querystring": "^0.2.0",
+    "request": "^2.53.0",
+    "url": "^0.10.3"
   },
   "devDependencies": {}
 }
