--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "Sunrise backend engineer challenge",
   "author": "Jake Sendar",
   "scripts": {
-    "test": "vows --spec --isolate",
+    "test": "mocha 'test/**/*.js'",
     "start": "nodemon app.js"
   },
   "dependencies": {
     "connect": "^3.3.5",
     "express": "^4.12.3",
     "express-session": "^1.10.4",
+    "mocha": "^2.2.1",
+    "nock": "^1.2.0",
     "node-rest-client": "^1.4.4",
     "nodemon": "^1.3.7",
     "querystring": "^0.2.0",
     "request": "^2.53.0",
+    "should": "^5.2.0",
+    "supertest": "^0.15.0",
     "url": "^0.10.3"
   },
   "devDependencies": {}
